syntax = "proto3";

import "google/protobuf/timestamp.proto";

package polypb;

message DiskInfo {
  uint64 total = 1;
  uint64 avail = 2;
}

message NodeInfo {
  DiskInfo diskInfo = 1;
  string addr = 2;
  string store_dir = 3;
}

message NodeInfoMap {
  map<string, NodeInfo> nodes = 1;
}

message BackupInfo {
  BackupMetadata full_backup = 1;
  repeated BackupMetadata inc_backups = 2;
  string db = 3;
}

message BackupMetadata {
  google.protobuf.Timestamp stored_time = 1;
  string node_name = 2;
  string host = 3;
  StoredType stored_type = 4;
  google.protobuf.Timestamp end_time = 5;
  uint64 file_size = 6;
  BackupType backup_type = 7;
  string db = 8;
  string to_lsn = 9;
  string key = 10;
}

message AllBackups {
  map<string, BackupInfo> db_to_backups = 1;
}

enum StoredType {
  LOCAL = 0;
}

enum BackupType {
  FULL = 0;
  INC = 1;
}
